--- a/style.css
+++ b/style.css
@@ -3,3 +3,24 @@ body {
   height: 100%;
   margin: 0;
 }
+.center {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+a:link {
+  color: grey;
+}
+
+input[type="text"] {
+  width: 10px;
+}
+
+p#introduction {
+  color: blue;
+  width: 800px 
+}
